# OMP-Task

./: README.md
Client/: CMakeLists.txt  client-app.cpp
Task-1/: CMakeLists.txt
Task-1/com.system.permissions/: client.cpp  permissions-binding.xml  permissions-client-impl.h  permissions-client.cpp  permissions-client.h  permissions-server-impl.h  permissions-server.cpp  permissions-server.h  sdbus-c++-xml2cpp  server.cpp
Task-2/: CMakeLists.txt
Task-2/com.system.time/: time-binding.xml  time-client-impl.h  time-client.cpp  time-client.h  time-server-impl.h  time-server.cpp  time-server.h
utils/: getObjectPath.h
